<resources>
    <string name="app_name">IndieFied</string>

    <!-- contentDescription / botões do player -->
    <string name="album_cover">Capa do álbum</string>
    <string name="prev">Anterior</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Próxima</string>
    <string name="favorite">Favorite</string>
    <string name="add">Adicionar</string>

    <!-- títulos das abas -->
    <string name="tab_player">Player</string>
    <string name="tab_library">Biblioteca</string>
    <string name="tab_search">Buscar</string>
</resources>